[package]
name = "dvsc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = "3.2.17"
hyper = {version = "0.14", features = ["full"] }
tokio = {version="1.21.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
